--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,17 +1,46 @@
 // If you want to override variables do it here
-@import "variables";
+@import 'variables';
 
 $enable-ltr: true;
 $enable-rtl: true;
 
 // Import CoreUI for React components library
-@import "@coreui/coreui/scss/coreui";
+@import '@coreui/coreui/scss/coreui';
 
 // Import Chart.js custom tooltips styles
-@import "@coreui/chartjs/scss/coreui-chartjs";
+@import '@coreui/chartjs/scss/coreui-chartjs';
 
-@import "layout";
-@import "example";
+@import 'layout';
+@import 'example';
 
 // If you want to add custom CSS you can put it here.
-@import "custom";
+@import 'custom';
+
+.modal__form {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 1px #eee solid;
+  padding: 30px 50px;
+  fieldset {
+    label {
+      & + textarea {
+        display: block;
+        width: 100%;
+        height: 300px;
+        margin-bottom: 20px;
+        resize: none;
+      }
+    }
+    button[type='submit'] {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+}
+
+.modal__btn--close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
